@@ -1,17 +1,15 @@
 package eu.europeana.clio.common.persistence.dao;
 
+import static java.lang.String.format;
+
 import eu.europeana.clio.common.exception.PersistenceException;
 import eu.europeana.clio.common.model.Report;
 import eu.europeana.clio.common.persistence.HibernateSessionUtils;
 import eu.europeana.clio.common.persistence.model.BatchRow;
 import eu.europeana.clio.common.persistence.model.ReportRow;
-import org.hibernate.SessionFactory;
-
 import java.time.Instant;
 import java.util.List;
-import java.util.stream.Collectors;
-
-import static java.lang.String.format;
+import org.hibernate.SessionFactory;
 
 /**
  * Data access class for accessing reports.
@@ -23,8 +21,8 @@ public class ReportDao {
     /**
      * Constructor.
      *
-     * @param sessionFactory The connection to the Clio persistence. Should be connected. This
-     *                       object does not close the connection.
+     * @param sessionFactory The connection to the Clio persistence. Should be connected. This object does not
+     * close the connection.
      */
     public ReportDao(SessionFactory sessionFactory) {
         this.hibernateSessionUtils = new HibernateSessionUtils(sessionFactory);
@@ -33,19 +31,21 @@ public class ReportDao {
     /**
      * Save a report after last batch.
      *
-     * @param report  The report to persist
+     * @param report The report to persist
      * @param batchId The ID of the batch after which the report is relevant
      * @return The ID of the newly created report.
      * @throws PersistenceException In case there was a persistence problem.
      */
     public long saveReport(String report, long batchId) throws PersistenceException {
         return hibernateSessionUtils.performInTransaction(session -> {
-            final BatchRow batchRow = session.get(BatchRow.class, batchId);
+            final BatchRow batchRow = session.find(BatchRow.class, batchId);
             if (batchRow == null) {
                 throw new PersistenceException(format("Cannot create run: batch with ID %s does not exist.", batchId));
             }
             final ReportRow reportRow = new ReportRow(Instant.now(), report, batchRow);
-            return (Long) session.save(reportRow);
+            session.persist(reportRow);
+            session.flush();
+            return reportRow.getReportId();
         });
     }
 
@@ -60,11 +60,12 @@ public class ReportDao {
         return hibernateSessionUtils.performInSession(session ->
                 session.createNamedQuery(ReportRow.GET_LATEST_REPORT_QUERY, ReportRow.class)
                         .setMaxResults(maxResults).getResultList().stream()
-                        .map(ReportDao::convert).collect(Collectors.toList()));
+                        .map(ReportDao::convert).toList());
     }
 
     /**
      * Get all report details.
+     *
      * @return the list of report details
      * @throws PersistenceException in case of a persistence exception
      */
@@ -72,7 +73,7 @@ public class ReportDao {
         return hibernateSessionUtils.performInSession(session ->
                 session.createNamedQuery(ReportRow.GET_ALL_REPORT_DETAILS_QUERY, ReportRow.class)
                         .getResultList().stream()
-                        .map(ReportDao::convert).collect(Collectors.toList()));
+                        .map(ReportDao::convert).toList());
     }
 
     /**
@@ -82,11 +83,25 @@ public class ReportDao {
      * @return the report
      * @throws PersistenceException if there was an error while getting the report
      */
-    public Report getReport(Long batchId) throws PersistenceException {
+    public Report getReportByBatchId(Long batchId) throws PersistenceException {
         return hibernateSessionUtils.performInSession(session ->
                 session.createNamedQuery(ReportRow.GET_REPORT_BY_BATCH_ID_QUERY, ReportRow.class)
                         .setParameter(ReportRow.BATCH_ID_PARAMETER, batchId)
                         .getResultList().stream().map(ReportDao::convert).findFirst().orElse(null));
+    }
+
+    /**
+     * Gets report by report id.
+     *
+     * @param reportId the report id
+     * @return the report by report id
+     * @throws PersistenceException the persistence exception
+     */
+    public Report getReportByReportId(Long reportId) throws PersistenceException {
+        return hibernateSessionUtils.performInSession(session ->
+            session.createNamedQuery(ReportRow.GET_REPORT_BY_REPORT_ID_QUERY, ReportRow.class)
+                   .setParameter(ReportRow.REPORT_ID_PARAMETER, reportId)
+                   .getResultList().stream().map(ReportDao::convert).findFirst().orElse(null));
     }
 
     private static Report convert(ReportRow reportRow) {
